--- a/gms.web/Views/Activity/Index.cshtml
+++ b/gms.web/Views/Activity/Index.cshtml
@@ -2,7 +2,6 @@
 @{
     ViewData["Title"] = localizer["activities"];
     bool IsRTL = CultureInfo.CurrentCulture.Name.StartsWith("ar");
-    var test = Model;
 }
 
 <!--begin::Content wrapper-->
@@ -83,11 +82,14 @@
                                     <td class="text-start" data-order="@a.ActivityCategory.Name">@a.ActivityCategory.Name</td>
                                     <td class="text-center">
                                         <div class="d-flex justify-content-center flex-shrink-0">
-                                            <button type="button" class="btn btn-icon btn-bg-light btn-light-primary btn-sm me-2 edit-group-btn" data-bs-toggle="tooltip" title="@localizer["edit"]" data-bs-custom-class="tooltip-inverse" data-id="@a.Id">
+                                            <button type="button" class="btn btn-icon btn-bg-light btn-light-primary btn-sm me-2 edit-activity-btn" data-bs-dismiss="click" data-bs-toggle="tooltip" title="@localizer["edit"]" data-bs-custom-class="tooltip-inverse" data-id="@a.Id">
                                                 <i class="ki-solid ki-pencil fs-2"></i>
                                             </button>
-                                            <button type="button" class="btn btn-icon btn-bg-light btn-light-danger btn-sm me-2 delete-group-btn" data-bs-toggle="tooltip" title="@localizer["delete"]" data-bs-custom-class="tooltip-inverse" data-id="@a.Id">
+                                            <button type="button" class="btn btn-icon btn-bg-light btn-light-danger btn-sm me-2 delete-activity-btn" data-bs-dismiss="click" data-bs-toggle="tooltip" title="@localizer["delete"]" data-bs-custom-class="tooltip-inverse" data-id="@a.Id">
                                                 <i class="ki-solid ki-trash fs-2"></i>
+                                            </button>
+                                            <button type="button" class="btn btn-icon btn-bg-light btn-light-success btn-sm me-2 show-activity-videos-btn" data-bs-dismiss="click" data-bs-toggle="tooltip" title="@localizer["show_activity_videos"]" data-bs-custom-class="tooltip-inverse" data-id="@a.Id">
+                                                <i class="ki-solid ki-eye fs-2"></i>
                                             </button>
                                         </div>
                                     </td>
