--- a/gms.web/Views/Shared/_Sidebar.cshtml
+++ b/gms.web/Views/Shared/_Sidebar.cshtml
@@ -252,7 +252,7 @@
 						<!--begin:Menu item-->
 						<div class="menu-item" side-menu-item="true">
 							<!--begin:Menu link-->
-							<a class="menu-link" href="@Url.Action("ClassesList", "Class")">
+							<a class="menu-link" asp-controller="Class" asp-action="Index">
 								<span class="menu-bullet">
 									<span class="bullet bullet-dot"></span>
 								</span>
