--- a/gms.web/Views/_ViewImports.cshtml
+++ b/gms.web/Views/_ViewImports.cshtml
@@ -7,11 +7,10 @@
 ﻿@using System.Globalization;
 @using gms.common.ViewModels;
 @using gms.data.Models;
-@using gms.common.Models.Identity;
-@using gms.common.Models.Role;
-
-
+@using gms.common.Models.Identity.User;
+@using gms.common.Models.Identity.Role;
 @using gms.common.Models.ActivityCat.Activity;
+@using gms.common.ViewModels.Activity;
 
 @inject IViewLocalizer localizer;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
