--- a/gms.web/Views/GymUser/AddNewMember.cshtml
+++ b/gms.web/Views/GymUser/AddNewMember.cshtml
@@ -1,5 +1,4 @@
-﻿@using gms.common.ViewModels.GymUser
-@model GymUserVM
+﻿@model CreateGymUserDTO
 @{
     ViewData["Title"] = localizer["add_new_member"];
     bool IsRTL = CultureInfo.CurrentCulture.Name.StartsWith("ar");
