--- a/gms.web/Views/GymUser/GymUserRoles.cshtml
+++ b/gms.web/Views/GymUser/GymUserRoles.cshtml
@@ -27,7 +27,7 @@
 			<button type="submit" class="btn btn-icon btn-bg-light btn-light-primary btn-sm me-2" data-bs-toggle="tooltip" title="@localizer["save"]" data-bs-custom-class="tooltip-inverse">
 				<i class="ki-solid ki-pencil fs-2"></i>
 			</button>
-			<a asp-action="GymUsers" asp-controller="Superadmin" class="btn btn-icon btn-bg-light btn-light-danger btn-sm" data-bs-toggle="tooltip" title="@localizer["cancel"]" data-bs-custom-class="tooltip-inverse">
+			<a asp-action="Index" asp-controller="GymUser" class="btn btn-icon btn-bg-light btn-light-danger btn-sm" data-bs-toggle="tooltip" title="@localizer["cancel"]" data-bs-custom-class="tooltip-inverse">
 				<i class="ki-solid ki-trash fs-2"></i>
 			</a>
 		</div>
