--- a/gms.web/Views/Class/_EditClass.cshtml
+++ b/gms.web/Views/Class/_EditClass.cshtml
@@ -7,6 +7,7 @@
 
 <!--begin::Form-->
 <form id="update_class_form" class="form d-flex flex-column flex-lg-row">
+    <input type="hidden" asp-for="@Model.Class.Id" />
     <!--begin::Wrapper-->
     <div class="w-100">
         <!--begin::Input group-->
