Last Update In Class Module

--- a/gms.web/Views/Activity/Index.cshtml
+++ b/gms.web/Views/Activity/Index.cshtml
@@ -55,7 +55,7 @@
                     <!--begin::Card toolbar-->
                     <div class="card-toolbar flex-row-fluid justify-content-end gap-5">
                         <!--begin::Add Activity-->
-                        <button id="add_new_activity" class="btn btn-primary">
+                        <button id="add_new_activity" class="btn btn-primary d-flex align-items-center">
                             <i class="ki-outline ki-plus fs-2"></i>@localizer["add_new_activity"]
                         </button>
                         <!--end::Add Activity-->
