--- a/gms.web/Views/Class/Index.cshtml
+++ b/gms.web/Views/Class/Index.cshtml
@@ -56,7 +56,12 @@
                     <!--begin::Card toolbar-->
                     <div class="card-toolbar flex-row-fluid justify-content-end gap-5">
                         <!--begin::Add Class-->
-                        <button id="add_new_class" class="btn btn-primary">
+                        <button id="classes_schedule" class="btn btn-primary d-flex align-items-center">
+                            <i class="ki-solid ki-calendar-2 fs-2"></i>@localizer["classes_schedule"]
+                        </button>
+                        <!--end::Add Class-->
+                        <!--begin::Add Class-->
+                        <button id="add_new_class" class="btn btn-primary d-flex align-items-center">
                             <i class="ki-outline ki-plus fs-2"></i>@localizer["add_new_class"]
                         </button>
                         <!--end::Add Class-->
