--- a/gms.web/Views/Gym/GroupsList.cshtml
+++ b/gms.web/Views/Gym/GroupsList.cshtml
@@ -64,7 +64,7 @@
                         </div>
                         <!--end::Flatpickr-->
                         <!--begin::Add Membership-->
-                        <button id="add_new_group" class="btn btn-primary">
+                        <button id="add_new_group" class="btn btn-primary d-flex align-items-center">
                             <i class="ki-outline ki-plus fs-2"></i>@localizer["add_new_group"]
                         </button>
                         <!--end::Add Membership-->
