--- a/gms.web/Views/Membership/Index.cshtml
+++ b/gms.web/Views/Membership/Index.cshtml
@@ -102,7 +102,7 @@
                         </div>
                         <!--end::Filter-->
                         <!--begin::Add Membership-->
-                        <a href="@Url.Action("AddNewMembership", "Membership")" class="btn btn-primary">
+                        <a href="@Url.Action("AddNewMembership", "Membership")" class="btn btn-primary d-flex align-items-center">
                             <i class="ki-outline ki-plus fs-2"></i>@localizer["add_new_membership"]
                         </a>
                         <!--end::Add Membership-->
