--- a/gms.web/Views/Class/_EditClass.cshtml
+++ b/gms.web/Views/Class/_EditClass.cshtml
@@ -48,6 +48,23 @@
             <input type="number" class="form-control" asp-for="@Model.Class.ClassFees" placeholder="@localizer["enter"] @localizer["booking_fees"] @localizer["here"]" min="0" style="direction:@(IsRTL ? "rtl" : "ltr" )" />
         </div>
         <!--end::Input group-->
+        <!--begin::Input group-->
+        <div class="col mb-5 fv-row">
+            <label class="required form-label ms-2">@localizer["select_days"]</label>
+            <!--begin::Select-->
+            <select class="form-select" asp-for="@Model.WeekDayIds" data-control="select2" data-close-on-select="false" data-placeholder="@localizer["select_an_option"]" data-allow-clear="false" multiple="multiple">
+                <option></option>
+                <option value="1">@localizer["sunday"]</option>
+                <option value="2">@localizer["monday"]</option>
+                <option value="3">@localizer["tuesday"]</option>
+                <option value="4">@localizer["wednesday"]</option>
+                <option value="5">@localizer["thursday"]</option>
+                <option value="6">@localizer["friday"]</option>
+                <option value="7">@localizer["saturday"]</option>
+            </select>
+            <!--end::Select-->
+        </div>
+        <!--end::Input group-->
         <div class="row row-cols-1 row-cols-sm-2 rol-cols-md-1 row-cols-lg-2">
             <!--begin::Input group-->
             <div class="col mb-5 fv-row">
