--- a/gms.web/wwwroot/assets/plugins/global/plugins.bundle.rtl.css
+++ b/gms.web/wwwroot/assets/plugins/global/plugins.bundle.rtl.css
@@ -49028,15 +49028,15 @@ body.swal2-height-auto {
 }
 
 .toastr {
-  background-position: calc(100% - 1.5rem) center !important;
-  /*rtl:ignore*/
-  background-position: 1.5rem center !important;
-  box-shadow: var(--bs-dropdown-box-shadow) !important;
-  border-radius: 0.75rem !important;
-  border: 0 !important;
-  background-color: var(--bs-gray-100);
-  color: var(--bs-gray-700);
-  padding: 1.25rem 1.25rem 1.25rem 4.5rem !important;
+    background-position: calc(100% - 1.5rem) center !important;
+    /*rtl:ignore*/
+    /*background-position: 1.5rem center !important;*/
+    box-shadow: var(--bs-dropdown-box-shadow) !important;
+    border-radius: 0.75rem !important;
+    border: 0 !important;
+    background-color: var(--bs-gray-100);
+    color: var(--bs-gray-700);
+    padding: 1.25rem 4.5rem 1.25rem 1.25rem !important
 }
 .toastr .toastr-close-button {
   outline: none !important;
