--- a/gms.web/Views/Membership/EditMembership.cshtml
+++ b/gms.web/Views/Membership/EditMembership.cshtml
@@ -1,4 +1,4 @@
-﻿@using gms.common.Models.MembershipCat
+﻿@using gms.common.Models.MembershipCat.MembershipPlan
 @model UpdateMembershipDTO
 @{
 	ViewData["Title"] = localizer["editmembership"];
