--- a/gms.web/Views/Membership/AddNewMembership.cshtml
+++ b/gms.web/Views/Membership/AddNewMembership.cshtml
@@ -1,4 +1,4 @@
-﻿@using gms.common.Models.MembershipCat
+﻿@using gms.common.Models.MembershipCat.MembershipPlan
 @model CreateMembershipDTO
 @{
 	ViewData["Title"] = localizer["add_new_membership"];
